[package]
name = "channels1"
version = "0.1.0"
authors = ["Jose Manuel Cantera Fonseca <jmcanterafonseca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "develop"}
iota-core = { git = "https://github.com/iotaledger/iota.rs", rev = "03cf531" }
serde_json = "1.0"
chrono = "0.4"
